# ticketer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  add_admin_user.py  docker-compose.yml  entrypoint.sh  fcm_config.json  nginx.conf  pyproject.toml
.github/workflows/: pytest.yml
pr/: config.py  exceptions.py  main.py  schemas.py
pr/models/: __init__.py  event.py  external_auth.py  google_auth.py  location.py  payment_method.py  session.py  user.py
pr/utils/: google_oauth.py  jwt.py  jwt_auth.py  turnstile.py
tests/: __init__.py  _s3_server.py  conftest.py  test_admin.py  test_auth.py  test_events.py  test_oauth.py  test_tickets.py  test_user.py
ticketer/: __main__.py  admin.py  config.py  errors.py  exceptions.py  main.py  response_schemas.py  schemas.py
ticketer/models/: __init__.py  event.py  event_plan.py  external_auth.py  location.py  payment.py  payment_method.py  session.py  ticket.py  user.py  user_device.py
ticketer/routers/: admin.py  admin_ui.py  auth.py  events.py  tickets.py  users_me.py
ticketer/utils/: __init__.py  cache.py  google_oauth.py  jwt_auth.py  mfa.py  paypal.py  recaptcha.py  turnstile.py
