[tool.poetry]
name = "ticketer"
version = "0.1.0"
description = ""
authors = ["RuslanUC <dev_ruslan_uc@protonmail.com>"]
readme = "README.md"
packages = [{include = "ticketer"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
tortoise-orm = {extras = ["asyncmy", "accel"], version = "^0.20.1"}
s3lite = "^0.1.4"
bcrypt = "^4.1.3"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
aerich = "^0.7.2"
pydantic = {extras = ["email"], version = "^2.7.1"}
pytest-httpx = "^0.30.0"
python-magic = "^0.4.27"
pyvips = "^2.2.3"
aiofcm = {git = "https://github.com/RuslanUC/aiofcm"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
asgi-lifespan = "^2.1.0"
fake-s3 = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-report=xml --cov-append --cov=ticketer"

[tool.coverage.run]
data_file = "coverage.coverage"